--- a/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/MSO/msor-dialogueports/msor-dialogueports.component.html
@@ -470,7 +470,7 @@
         </div>
     </div>
     <ag-grid-angular #agGrid id="myGrid" domLayout='normal' class="ag-theme-alpine table-class" rowAnimation
-        [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData" (gridReady)="onGridReady($event)"
+        [gridOptions]="gridOptions" [columnDefs]="columnDefs3" [rowData]="rowData" (gridReady)="onGridReady($event)"
         [enableCellTextSelection]="true">
     </ag-grid-angular>
 </div>
