--- a/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-create/channel-create.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-create/channel-create.component.html
@@ -205,7 +205,7 @@
                 </div>
             </div>
 
-            <div class="input_box">
+            <div class="input_box display">
                 <label for="isPercentage">Is Percentage</label>
                 <!-- <div class="toggle-button-cover">
                     <div class="button b2" id="button-10">
