--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.html
@@ -1,6 +1,6 @@
 <div class="">
     <div class="row">
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-group'></i>
@@ -9,7 +9,7 @@
                 <div class="mt-2 mb-2 text-center text">Total Subscriber</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-user-check'></i>
@@ -18,7 +18,7 @@
                 <div class="mt-2 mb-2 text-center text"> Active Subscriber</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-user-minus'></i>
@@ -27,7 +27,7 @@
                 <div class="mt-2 mb-2 text-center text"> Deactive Subscriber</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-user-plus'></i>
@@ -36,7 +36,7 @@
                 <div class="mt-2 mb-2 text-center text"> New Subscriber</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-user-x'></i>
@@ -46,7 +46,7 @@
                 <div class="mt-2 mb-2 text-center text"> Block Subscriber</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bx-x-circle'></i>
@@ -55,7 +55,7 @@
                 <div class="mt-2 mb-2 text-center text">Expired Smartcard</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-id-card'></i>
@@ -65,7 +65,7 @@
             </div>
         </div>
 
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-lock'></i>
@@ -74,7 +74,7 @@
                 <div class="mt-2 mb-2 text-center">Total Suspended</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bxs-user-plus'></i>
@@ -83,7 +83,7 @@
                 <div class="mt-2 mb-2 text-center text">First Time Activation</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bx-time-five'></i>
@@ -92,7 +92,7 @@
                 <div class="mt-2 mb-2 text-center text">Tomorrow Expiry</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bx-dollar-circle'></i>
@@ -101,7 +101,7 @@
                 <div class="mt-2 mb-2 text-center text">Yesterday Recharge</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bx-credit-card'></i>
@@ -110,7 +110,7 @@
                 <div class="mt-2 mb-2 text-center text">Today Recharge</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bx-clipboard'></i>
@@ -119,7 +119,7 @@
                 <div class="mt-2 mb-2 text-center text">Inventory</div>
             </div>
         </div>
-        <div class="col-6 col-lg-1-7 mb-3">
+        <div class="col-6 col-lg-1-7 ">
             <div class="card d-flex flex-column justify-content-between p-3">
                 <div class="d-flex justify-content-between w-100">
                     <i class='bx bx-map'></i>
@@ -134,19 +134,19 @@
     <div class="col-12 col-md-7 display justify-content-center align-item-center balance gap-3">
         <div class="col-12 col-lg-4 mb-3 ">
             <div class="card d-flex flex-column justify-content-between p-3">
-                <div class="mt-2 mb-2 text-center text1">Current Balance</div>
+                <div class="mt-2 mb-3 text-center text1">Current Balance</div>
                 <h5>1000</h5>
             </div>
         </div>
         <div class="col-12 col-lg-4 mb-3 ">
             <div class="card d-flex flex-column justify-content-between p-3">
-                <div class="mt-2 mb-2 text-center text1">MSO Recharge</div>
+                <div class="mt-2 mb-3 text-center text1">MSO Recharge</div>
                 <h5>1000</h5>
             </div>
         </div>
         <div class="col-12 col-lg-4 mb-3 ">
             <div class="card d-flex flex-column justify-content-between p-3">
-                <div class="mt-2 mb-2 text-center text1">Today Recharge</div>
+                <div class="mt-2 mb-3 text-center text1">Today Recharge</div>
                 <h5>1000</h5>
             </div>
         </div>
