--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,10 @@
 <div class="bg">
     <div class="login-wrap d-flex justify-content-center align-items-center">
         <div class="login-html">
+            <div class="d-flex justify-content-center align-item-center">
+                <img *ngIf="msoLogo" [src]="msoLogo" alt="MSO Logo"
+                    style="width: 170px; height: auto;display:flex;margin: auto;">
+            </div>
             <div class="d-block justify-content-center align-items-center mb-3">
                 <h2 style="text-transform:capitalize;color:#256462">RSMS</h2>
             </div>
