--- a/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-edit/channel-edit.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-edit/channel-edit.component.html
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <br>
-            <div class="form-group input_box" style="margin: auto;">
+            <div class="form-group input_box display" style="margin: auto;">
                 <div class="col-12 col-md-6 ">
                     <span for="isPercentage" class="me-2">Is Percentage</span>
                 </div>
