--- a/src/app/admin/features/nav/nav.component.scss
+++ b/src/app/admin/features/nav/nav.component.scss
@@ -160,7 +160,8 @@
     position: sticky;
     padding: 5px;
     top: 42px;
-    height: 50px;
+    height: 70px;
+    // height: 50px;
     left: 0;
     z-index: 99;
 }
