--- a/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.scss
+++ b/src/app/admin/features/operator_Login/operatordashboard/operatordashboard.component.scss
@@ -3,10 +3,10 @@
     border-radius: 8px;
     text-align: center;
     background-color: #f8f9fa;
-    // box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 10px;
     width: 100%;
-    height: 85%;
+    height: 75%;
     border: white;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .text {
-    font-size: 17px;
+    font-size: 15px;
     color: var(--text-color);
 }
 
