--- a/src/app/admin/features/special_role/msodetails/msodetails.component.html
+++ b/src/app/admin/features/special_role/msodetails/msodetails.component.html
@@ -3,7 +3,7 @@
         <div class="d-block justify-content-center align-items-center">
             <div class="col-6 col-md-6">
                 <!-- <img [src]=" msodetails?.msoLogo || '/assets/images/login/contact1.png'" style="width: 250px;"> -->
-                <img [src]="'/assets/images/login/contact1.png'" style="width: 250px;">
+                <img [src]=" msoLogo ||  '/assets/images/login/contact1.png'" style="width: 250px;">
             </div>
             <div class="col-6 col-md-6 w-100 d-flex justify-content-center align-items-center">
                 <label class="btn btn-success mx-1" style="width: 100px;">
@@ -18,9 +18,9 @@
     <div class="card col-12 col-md-6 d-flex justify-content-center align-items-center profile ">
         <!-- <div class="col d-flex justify-content-center align-items-center"> -->
         <div class="row">
-            <div class="row input-box  mb-3">
+            <div class="row input_box  mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">MSO NAME </label>
+                    <span for="">MSO NAME </span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -30,9 +30,9 @@
                 </div>
             </div>
 
-            <div class="row input-box mb-3">
+            <div class="row input_box mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">MSO AREA </label>
+                    <span for="">MSO AREA </span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -41,9 +41,9 @@
                     {{msodetails?.msoArea}}
                 </div>
             </div>
-            <div class="row input-box mb-3">
+            <div class="row input_box mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">MSO STREET </label>
+                    <span for="">MSO STREET </span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -52,9 +52,9 @@
                     {{msodetails?.msoStreet}}
                 </div>
             </div>
-            <div class="row input-box mb-3">
+            <div class="row input_box mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">MSO PINCODE </label>
+                    <span for="">MSO PINCODE </span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -63,9 +63,9 @@
                     {{msodetails?.msoPincode}}
                 </div>
             </div>
-            <div class="row input-box mb-3">
+            <div class="row input_box mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">MSO E-MAIL</label>
+                    <span for="">MSO E-MAIL</span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -74,9 +74,9 @@
                     {{msodetails?.msoEmail}}
                 </div>
             </div>
-            <div class="row input-box mb-3">
+            <div class="row input_box mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">MSO CONTACT</label>
+                    <span for="">MSO CONTACT</span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -85,9 +85,9 @@
                     {{msodetails?.msoContact}}
                 </div>
             </div>
-            <div class="row input-box mb-3">
+            <div class="row input_box mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">PAN NO</label>
+                    <span for="">PAN NO</span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -96,9 +96,9 @@
                     {{msodetails?.panNo}}
                 </div>
             </div>
-            <div class="row input-box mb-3">
+            <div class="row input_box mb-3">
                 <div class="col-5 col-md-5">
-                    <label for="">GST NO</label>
+                    <span for="">GST NO</span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
@@ -107,15 +107,15 @@
                     {{msodetails?.gstNo}}
                 </div>
             </div>
-            <div class="row input-box mb-3" style="cursor: pointer;">
+            <div class="row input_box mb-3" style="cursor: pointer;">
                 <div class="col-5 col-md-5">
-                    <label for="">EDIT</label>
+                    <span for="">EDIT</span>
                 </div>
                 <div class="col-1 col-md-1">
                     <span for="">:</span>
                 </div>
                 <div class="col-6 col-md-6" (click)="openDialogue($event)">
-                    <i class="fa fa-pencil-square" style="font-size: 20px;" aria-hidden="true"></i>
+                    <i class="fa fa-pencil-square" style="font-size: 30px;color: cadetblue;" aria-hidden="true"></i>
                 </div>
             </div>
 
