--- a/src/app/admin/features/special_role/msodetails/msodetails.component.scss
+++ b/src/app/admin/features/special_role/msodetails/msodetails.component.scss
@@ -1,6 +1,6 @@
 .profile {
     padding: 1rem;
-    background-color: rgb(222 241 241);
+    // background-color: rgb(222 241 241);
     border-radius: 1px solid rgb(77, 75, 75);
     height: 28pc;
     width: 25pc;
@@ -8,7 +8,8 @@
 
 .profile1 {
     padding: 1rem;
-    background-color: rgb(222 241 241);
+    margin-top: 1%;
+    // background-color: rgb(222 241 241);
     border-radius: 1px solid rgb(77, 75, 75);
     height: 28pc;
     width: 25pc;
